# intrinsic-rl

./: .gitignore  README.md  trace.txt
code/: EGL_SETUP.md  pyproject.toml
code/configs/: bipedal_icm.yaml  bipedal_proposed.yaml  bipedal_riac.yaml  bipedal_ride.yaml  bipedal_rnd.yaml  bipedal_vanilla.yaml  bipedalwalker_glpe.yaml  bipedalwalker_icm.yaml  bipedalwalker_riac.yaml  bipedalwalker_ride.yaml  bipedalwalker_rnd.yaml  bipedalwalker_vanilla.yaml  carracing_icm.yaml  carracing_proposed.yaml  carracing_proposed_global_rms.yaml  carracing_proposed_impact_only.yaml  carracing_proposed_lp_only.yaml  carracing_proposed_nogate.yaml  carracing_riac.yaml  carracing_ride.yaml  carracing_rnd.yaml  carracing_vanilla.yaml  mountaincar_fs2.yaml  mountaincar_glpe.yaml  mountaincar_icm.yaml  mountaincar_proposed.yaml  mountaincar_proposed_global_rms.yaml  mountaincar_proposed_impact_only.yaml  mountaincar_proposed_lp_only.yaml  mountaincar_proposed_nogate.yaml  mountaincar_riac.yaml  mountaincar_ride.yaml  mountaincar_rnd.yaml  mountaincar_vanilla.yaml
code/configs/ant_v5/: ant5_glpe.yaml  ant5_glpe_01_ref.yaml  ant5_glpe_02_higher_lr.yaml  ant5_glpe_03_lower_lr.yaml  ant5_glpe_04_long_rollout.yaml  ant5_glpe_05_short_rollout.yaml  ant5_glpe_06_high_gamma.yaml  ant5_glpe_07_entropy.yaml  ant5_glpe_08_intrinsic_heavy.yaml  ant5_glpe_09_no_taper.yaml  ant5_glpe_10_late_taper.yaml  ant5_glpe_11_lower_lr_late_taper.yaml  ant5_glpe_12_lower_lr_kl_guard.yaml  ant5_glpe_13_entropy_faster.yaml  ant5_glpe_cache.yaml  ant5_glpe_impact_only.yaml  ant5_glpe_lp_only.yaml  ant5_glpe_nogate.yaml  ant5_icm.yaml  ant5_riac.yaml  ant5_ride.yaml  ant5_rnd.yaml  ant5_vanilla.yaml
code/configs/bipedalwalker_v3/: bw3_glpe.yaml  bw3_glpe_cache.yaml  bw3_glpe_impact_only.yaml  bw3_glpe_lp_only.yaml  bw3_glpe_nogate.yaml  bw3_glpe_seed0__01_baseline.yaml  bw3_glpe_seed0__02_low_eta.yaml  bw3_glpe_seed0__03_high_eta_early_taper.yaml  bw3_glpe_seed0__04_lp_emphasis_strict_gate.yaml  bw3_glpe_seed0__05_impact_emphasis_loose_gate.yaml  bw3_glpe_seed0__06_conservative_ppo_klstop.yaml  bw3_glpe_seed0__07_aggressive_ppo_big_batch.yaml  bw3_glpe_seed0__08_long_horizon_gamma.yaml  bw3_glpe_seed0__09_entropy_bonus.yaml  bw3_glpe_seed0__10_short_rollout_more_envs.yaml  bw3_icm.yaml  bw3_riac.yaml  bw3_ride.yaml  bw3_rnd.yaml  bw3_vanilla.yaml
code/configs/carracing_v3/: cr3_glpe_01_base.yaml  cr3_glpe_02_long_rollout.yaml  cr3_glpe_03_high_gamma.yaml  cr3_glpe_04_aggressive_lr.yaml  cr3_glpe_05_conservative_lr.yaml  cr3_glpe_06_default_actions.yaml  cr3_glpe_07_continuous_actions.yaml  cr3_glpe_08_async_vector.yaml
code/configs/halfcheetah_v5/: hc5_glpe.yaml  hc5_glpe_01_base.yaml  hc5_glpe_02_lr_low.yaml  hc5_glpe_03_lr_high.yaml  hc5_glpe_04_gamma.yaml  hc5_glpe_05_strong_intrinsic.yaml  hc5_glpe_06_lp_heavy.yaml  hc5_glpe_07_gate_aggressive.yaml  hc5_glpe_08_gate_conservative_batch.yaml  hc5_glpe_09_entropy.yaml  hc5_glpe_10_asyncvec.yaml  hc5_glpe_cache.yaml  hc5_glpe_impact_only.yaml  hc5_glpe_lp_only.yaml  hc5_glpe_nogate.yaml  hc5_icm.yaml  hc5_riac.yaml  hc5_ride.yaml  hc5_rnd.yaml  hc5_vanilla.yaml
code/configs/humanoid_v5/: hv5_glpe.yaml  hv5_glpe_01_baseline.yaml  hv5_glpe_02_wide_batch.yaml  hv5_glpe_03_long_horizon.yaml  hv5_glpe_04_entropy_regularized.yaml  hv5_glpe_05_strong_intrinsic.yaml  hv5_glpe_06_weak_intrinsic.yaml  hv5_glpe_07_gate_conservative.yaml  hv5_glpe_08_gate_aggressive.yaml  hv5_glpe_09_entropy_no_taper.yaml  hv5_glpe_09_long_horizon_entropy.yaml  hv5_glpe_10_entropy_long_taper.yaml  hv5_glpe_10_long_horizon_no_taper.yaml  hv5_glpe_11_gate_conservative_stable.yaml  hv5_glpe_12_medium_intrinsic.yaml  hv5_glpe_12_strong_intrinsic_stable.yaml  hv5_glpe_13_big_batch_stable.yaml  hv5_glpe_13_long_horizon_entropy.yaml  hv5_glpe_14_custom.yaml  hv5_glpe_14_frameskip5_scaled.yaml  hv5_glpe_15_custom.yaml  hv5_glpe_15_nogate_entropy.yaml  hv5_glpe_16_custom.yaml  hv5_glpe_16_gate_conservative_stable_no_taper.yaml  hv5_glpe_17_gate_conservative_stable_lr1p5e4.yaml  hv5_glpe_18_gate_conservative_stable_kl02.yaml  hv5_glpe_19_long_horizon_entropy_cons_gate.yaml  hv5_glpe_20_long_horizon_entropy_early_taper.yaml  hv5_glpe_21_long_horizon_entropy_lr1p5e4.yaml  hv5_glpe_cache.yaml  hv5_glpe_impact_only.yaml  hv5_glpe_lp_only.yaml  hv5_glpe_nogate.yaml  hv5_icm.yaml  hv5_riac.yaml  hv5_ride.yaml  hv5_rnd.yaml  hv5_vanilla.yaml
code/configs/mountaincar_v0/: mc0_glpe.yaml  mc0_glpe_10_taper_late.yaml  mc0_glpe_11_no_taper_low_eta.yaml  mc0_glpe_13_ppo_refine.yaml  mc0_glpe_cache.yaml  (+18 more)
code/irl/: __init__.py  __main__.py  _version.py  eval.py  evaluator.py  experiments.py  paper_defaults.py  plot.py  stats_utils.py  sweep.py  train.py  video.py
code/results_suite/: coverage.csv  eval_meta.json  summary.csv  summary_by_step.csv  summary_raw.csv
code/scripts/: generate_paper_plots.sh  make_fig1.py
code/tests/: __init__.py  test_algo.py  test_auc_plots.py  test_auc_time_budget.py  test_bench_plots.py  test_benchmarks.py  test_config.py  test_core.py  test_determinism.py  test_env_utils.py  test_episode_metrics.py  test_evaluation.py  test_glpe_plots_selection.py  test_icm.py  test_image_shapes.py  test_intrinsic.py  test_loggers.py  test_methods_spec.py  test_paper_pipeline.py  test_plot_determinism.py  test_plot_utils.py  test_plots.py  test_plots_manifest.py  test_plotting_defaults.py  test_resume_intrinsic_optimizer.py  test_resume_points.py  test_ride_rollout.py  test_run_meta.py  test_steps.py  test_taper_plot.py  test_timeout_bootstrap_guard.py  test_training.py  test_trajectory_projection.py  test_trajectory_semantics.py  test_validate.py
(+383 files in other folders)
