[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsic-rl"
dynamic = ["version"]
description = "Intrinsic RL research codebase (sprint-0 skeleton)."
requires-python = ">=3.10,<3.11"
authors = [{ name = "Intrinsic RL Team" }]
keywords = ["reinforcement-learning", "intrinsic-motivation", "ppo", "research"]

# Core runtime deps. Avoid platform-compiling extras here.
dependencies = [
  "torch>=2.1",
  "gymnasium>=1.2",
  "stable-baselines3>=2.3",
  "mujoco>=3.0",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tensorboard>=2.13",
  "scikit-learn>=1.3",
  "typer>=0.9",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
# Developer tools & test stack
dev = [
  "pytest>=7.4",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "types-PyYAML>=6.0",
]

# Box2D environments (BipedalWalker, CarRacing):
# - On Windows: prefer prebuilt wheels via `Box2D` (pybox2d).
# - On non-Windows: gymnasium's extra is fine.
box2d = [
  'Box2D>=2.3.10; platform_system == "Windows"',
  'gymnasium[box2d]>=0.29; platform_system != "Windows"',
  "pygame>=2.1.3",
]

[project.scripts]
# Stub CLIs (currently print placeholders as per Sprint 0)
intrinsic-rl = "irl.__main__:main"
irl-train     = "irl.train:main"
irl-eval      = "irl.eval:main"
irl-plot      = "irl.plot:main"
irl-sweep     = "irl.sweep:main"

[tool.setuptools.packages.find]
# Only package the library code (exclude tests from the wheel)
include = ["irl", "irl.*"]

[tool.setuptools.dynamic]
version = { attr = "irl._version.__version__" }

# ---- Tooling configs (lightweight, Sprint 0 friendly) ----
[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
