[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsic-rl"
dynamic = ["version"]
description = "Intrinsic RL research codebase for impact and learning-progress signals."
requires-python = ">=3.10,<3.12"
authors = [{ name = "Intrinsic RL Team" }]
keywords = ["reinforcement-learning", "intrinsic-motivation", "ppo", "research"]

# Core runtime deps kept intentionally lean.
# Environment-specific heavy deps (Box2D, MuJoCo) are provided as optional extras below.
dependencies = [
  "torch>=2.1",
  "gymnasium>=1.2",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "typer>=0.9",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Developer tools & test stack
dev = [
  "pytest>=7.4",
  "black>=24.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "types-PyYAML>=6.0",
]

# TensorBoard logging is optional; the code gracefully disables TB when not installed.
tb = [
  "tensorboard>=2.13",
]

# Box2D environments (BipedalWalker, CarRacing):
# - On Windows: prefer prebuilt wheels via `Box2D` (pybox2d).
# - On non-Windows: gymnasium's extra is fine.
box2d = [
  'Box2D>=2.3.10; platform_system == "Windows"',
  'gymnasium[box2d]>=0.29; platform_system != "Windows"',
  "pygame>=2.1.3",
]

# MuJoCo environments (Ant, HalfCheetah, Humanoid).
# Install this extra when you want to run MuJoCo-based tasks.
mujoco = [
  "mujoco>=3.0",
  "gymnasium[mujoco]>=0.29",
]

# Optional baseline implementations & utilities (not used by core code).
sb3 = [
  "stable-baselines3>=2.3",
]

[project.scripts]
# Stub CLIs (lightweight entry points; see irl.__main__.py for routing)
intrinsic-rl = "irl.__main__:main"
irl-train     = "irl.train:main"
irl-eval      = "irl.eval:main"
irl-plot      = "irl.plot:main"
irl-sweep     = "irl.sweep:main"

[tool.setuptools.packages.find]
# Only package the library code (exclude tests from the wheel)
include = ["irl", "irl.*"]

[tool.setuptools.dynamic]
version = { attr = "irl._version.__version__" }

# ---- Tooling configs (kept lightweight for rapid iteration) ----
[tool.black]
target-version = ["py310"]
line-length = 100

[tool.ruff]
target-version = "py310"
line-length = 100
lint.select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
