[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intrinsic-rl"
dynamic = ["version"]
description = "Intrinsic RL research codebase for impact and learning-progress signals."
requires-python = ">=3.10,<3.12"
authors = [{ name = "Intrinsic RL Team" }]
keywords = ["reinforcement-learning", "intrinsic-motivation", "ppo", "research"]
dependencies = [
  "torch>=2.1",
  "gymnasium>=1.2",
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "typer>=0.9",
  "pyyaml>=6.0",
  "imageio>=2.30",
  "imageio-ffmpeg>=0.4.8",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
box2d = [
  'Box2D>=2.3.10; platform_system == "Windows"',
  'gymnasium[box2d]>=0.29; platform_system != "Windows"',
  "pygame>=2.1.3",
]
mujoco = ["mujoco>=3.0", "gymnasium[mujoco]>=0.29"]
sb3 = ["stable-baselines3>=2.3"]

[project.scripts]
intrinsic-rl = "irl.__main__:main"
irl-train = "irl.train:main"
irl-eval = "irl.eval:main"
irl-plot = "irl.plot:main"
irl-sweep = "irl.sweep:main"

[tool.setuptools.packages.find]
include = ["irl", "irl.*"]

[tool.setuptools.dynamic]
version = { attr = "irl._version.__version__" }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
